update openocd & qemu titles to include v

--- a/openocd/_posts/2015-01-31-openocd-v0.8.0-20150131-released.md
+++ b/openocd/_posts/2015-01-31-openocd-v0.8.0-20150131-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  GNU ARM Eclipse OpenOCD 0.8.0-20150131* released
+title:  GNU ARM Eclipse OpenOCD v0.8.0-20150131* released
 download_url: https://github.com/gnuarmeclipse/openocd/releases/tag/gae-0.8.0-20150131
 
 author: Liviu Ionescu
