--- a/qemu/_posts/2015-04-04-qemu-v2-2-92-20150404-released.md
+++ b/qemu/_posts/2015-04-04-qemu-v2-2-92-20150404-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  GNU ARM Eclipse QEMU 2.2.92-20150404*-dev released
+title:  GNU ARM Eclipse QEMU v2.2.92-20150404*-dev released
 download_url: https://github.com/gnuarmeclipse/qemu/releases/edit/gae-2.2.92-20150404
 
 author: Liviu Ionescu
