--- a/openocd/_posts/2015-05-19-openocd-v0.9.0-20150519-released.md
+++ b/openocd/_posts/2015-05-19-openocd-v0.9.0-20150519-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  GNU ARM Eclipse OpenOCD 0.9.0-20150519* released
+title:  GNU ARM Eclipse OpenOCD v0.9.0-20150519* released
 download_url: https://github.com/gnuarmeclipse/openocd/releases/tag/gae-0.9.0-20150519
 
 author: Liviu Ionescu
