--- a/qemu/_posts/2015-08-02-qemu-v2-3-50-20150801-released.md
+++ b/qemu/_posts/2015-08-02-qemu-v2-3-50-20150801-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  GNU ARM Eclipse QEMU 2.3.50-20150801*-dev released
+title:  GNU ARM Eclipse QEMU v2.3.50-20150801*-dev released
 download_url: https://github.com/gnuarmeclipse/qemu/releases/tag/gae-2.3.50-20150801
 
 author: Liviu Ionescu
