article on ARM Community added
- project Watching picture updated

--- a/site/articles/arm-com-2014-07.md
+++ b/site/articles/arm-com-2014-07.md
@@ -1,12 +1,22 @@
 ---
 layout: page
 permalink: /articles/arm-com-2014-07/
-title: 'GNU ARM Eclipse: open source tools with (experimental) CMSIS Pack support'
+title: 'Article: GNU ARM Eclipse: open source tools with (experimental) CMSIS Pack support'
 author: Liviu Ionescu
 
 date: 2015-09-11 18:48:00
 
+tags:
+  - arm
+  - gnu
+  - gcc
+  - eclipse
+  - j-link
+  - cmsis-pack
+
 ---
+
+<small>(This article was published in the [ARM Connected Community ](http://community.arm.com/groups/tools/blog/2014/07/17/gnu-arm-eclipse-open-source-tools-with-experimental-cmsis-pack-support) blog, on 17.08.2014).</small>
 
 ## Overview
 
