new post with ARM article
- renamed 2015-09
- some old posts suffixed with date, to make them unique

--- a/site/articles/arm-com-2015-09.md
+++ b/site/articles/arm-com-2015-09.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-permalink: /articles/arm-com-2015-08/
+permalink: /articles/arm-com-2015-09/
 title: 'Article: The GNU ARM Eclipse project has a new look and a new home at GitHub'
 author: Liviu Ionescu
 
@@ -23,11 +23,11 @@ tags:
 
 ## Overview
 
-The **[GNU ARM Eclipse](https://github.com/gnuarmeclipse)** project includes a set of open source Eclipse plug-ins and tools to create/build/debug/manage **ARM** (32-bit) and **AArch64** (64-bit) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. 
+The **[GNU ARM Eclipse project](https://github.com/gnuarmeclipse)** includes a set of open source Eclipse plug-ins and tools to create/build/debug/manage **ARM** (32-bit) and **AArch64** (64-bit) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. 
 
 ## New look
 
-Starting with September 2015, the [GNU ARM Eclipse](http://gnuarmeclipse.github.io) web site has a completely new look:
+Starting with September 2015, the [GNU ARM Eclipse web](http://gnuarmeclipse.github.io) site has a completely new look:
 
 ![GNU ARM Eclipse Home Page]({{ site.baseurl }}/images/2015/github-io-gae-home.png)
 
