article: add reference to EmbDev and EEVBlog

--- a/pages/articles/arm-com-2015-09.md
+++ b/pages/articles/arm-com-2015-09.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-<small>(This article was published in the [ARM Connected Community ](http://community.arm.com/groups/tools/blog/2015/09/29/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home) blog, on 29.08.2015).</small>
+<small>(This article was published in the [ARM Connected Community ](http://community.arm.com/groups/tools/blog/2015/09/29/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home) blog, on 29.08.2015 and republished in [EmbDev](https://embdev.net/topic/378409) and [EEVBlog](http://www.eevblog.com/forum/microcontrollers/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home-at-github/msg771376/#msg771376) on 06.10.2015).</small>
 
 ## Overview
 
