--- a/pages/articles/arm-com-2015-09.md
+++ b/pages/articles/arm-com-2015-09.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-<small>(This article was published in the [ARM Connected Community ](http://community.arm.com/groups/tools/blog/2015/09/29/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home) blog, on 29.08.2015 and republished in [EmbDev](https://embdev.net/topic/378409) and [EEVBlog](http://www.eevblog.com/forum/microcontrollers/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home-at-github/msg771376/#msg771376) on 06.10.2015).</small>
+<small>(This article was published in the [ARM Connected Community ](http://community.arm.com/groups/tools/blog/2015/09/29/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home) blog, on 29.08.2015 and republished in [EmbDev](https://embdev.net/topic/378409), [EEVBlog](http://www.eevblog.com/forum/microcontrollers/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home-at-github/msg771376/#msg771376)  and [ST Forum](https://my.st.com/public/STe2ecommunities/mcu/Lists/STM32Java/Flat.aspx?RootFolder=%2fpublic%2fSTe2ecommunities%2fmcu%2fLists%2fSTM32Java%2fThe%20GNU%20ARM%20Eclipse%20project%20has%20a%20new%20look%20and%20a%20new%20home%20at%20GitHub&FolderCTID=0x01200200770978C69A1141439FE559EB459D758000F9A0E3A95BA69146A17C2E80209ADC21) on 06.10.2015).</small>
 
 ## Overview
 
