article: add reference to Element 14

--- a/pages/articles/arm-com-2015-09.md
+++ b/pages/articles/arm-com-2015-09.md
@@ -23,7 +23,7 @@ tags:
 [EEVBlog](http://www.eevblog.com/forum/microcontrollers/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home-at-github/msg771376/#msg771376),
 [ST Forum](https://my.st.com/public/STe2ecommunities/mcu/Lists/STM32Java/Flat.aspx?RootFolder=%2fpublic%2fSTe2ecommunities%2fmcu%2fLists%2fSTM32Java%2fThe%20GNU%20ARM%20Eclipse%20project%20has%20a%20new%20look%20and%20a%20new%20home%20at%20GitHub&FolderCTID=0x01200200770978C69A1141439FE559EB459D758000F9A0E3A95BA69146A17C2E80209ADC21)
 and [STM32Duino](http://stm32duino.com/viewtopic.php?f=41&t=638)
-on 06.10.2015).</small>
+on Oct 6, 2015, and [Element 14](http://www.element14.com/community/groups/open-source-software/blog/2015/10/08/the-gnu-arm-eclipse-project-has-a-new-look-and-a-new-home-at-github) on Oct 8, 2015).</small>
 
 ## Overview
 
