fix Mapple -> Maple typo

--- a/_posts/qemu/releases/2015-04-04-qemu-v2-2-92-20150404-released.md
+++ b/_posts/qemu/releases/2015-04-04-qemu-v2-2-92-20150404-released.md
@@ -37,7 +37,7 @@ The boards initially added to **GNU ARM Eclipse QEMU** are:
 * FRDM-KL43Z – Freescale Freedom Development Platform for Kinetis KL[34]3, KL[12]7 MCUs (Experimental)
 * FRDM-KL46Z – Freescale Freedom Development Platform for Kinetis KL[34]x MCUs (Experimental)
 * LPCXpresso-LPC1769 – Embedded Artists LPCXpresso LPC1769 Development Board (Experimental)
-* Mapple – LeafLab Arduino-style STM32 microcontroller board (Experimental)
+* Maple – LeafLab Arduino-style STM32 microcontroller board (Experimental)
 * NUCLEO-F103RB – ST Nucleo Development Board for STM32 F1 series (Experimental)
 * NUCLEO-F334R8 – ST Nucleo Development Board for STM32 F3 series (Experimental)
 * NUCLEO-F411RE – ST Nucleo Development Board for STM32 F4 series (Experimental)
@@ -45,7 +45,7 @@ The boards initially added to **GNU ARM Eclipse QEMU** are:
 * Netduino2 – Netduino Development Board with STM32F2 (Experimental)
 * NetduinoGo – Netduino GoBus Development Board with STM32F4 (Experimental)
 * NetduinoPlus2 – Netduino Development Board with STM32F4 (Experimental)
-* OLIMEXINO-STM32 – Olimex Mapple (Arduino-like) Development Board (Experimental)
+* OLIMEXINO-STM32 – Olimex Maple (Arduino-like) Development Board (Experimental)
 * SAM3-H256 – Olimex Header Board for ATSAM3S4BA (Experimental)
 * STM32-E407 – Olimex Development Board for STM32F407ZGT6 (Experimental)
 * STM32-H103 – Olimex Header Board for STM32F103RBT6 (Experimental)
