--- a/_posts/qemu/releases/2015-08-02-qemu-v2-3-50-20150801-released.md
+++ b/_posts/qemu/releases/2015-08-02-qemu-v2-3-50-20150801-released.md
@@ -33,11 +33,11 @@ In addition to fully supporting the semihosting commands, intended to running un
 
 The following boards are fully supported in graphical mode:
 
-* **Mapple** - LeafLab Arduino-style STM32 microcontroller board (r5)
+* **Maple** - LeafLab Arduino-style STM32 microcontroller board (r5)
 * **NUCLEO-F103RB** - ST Nucleo Development Board for STM32 F1 series
 * **NetduinoGo** - Netduino GoBus Development Board with STM32F4
 * **NetduinoPlus2** - Netduino Development Board with STM32F4
-* **OLIMEXINO-STM32** - Olimex Mapple (Arduino-like) Development Board
+* **OLIMEXINO-STM32** - Olimex Maple (Arduino-like) Development Board
 * **STM32-E407** - Olimex Development Board for STM32F407ZGT6
 * **STM32-H103** - Olimex Header Board for STM32F103RBT6
 * **STM32-P103** - Olimex Prototype Board for STM32F103RBT6
