--- a/pages/articles/arm-com-2014-07.md
+++ b/pages/articles/arm-com-2014-07.md
@@ -34,7 +34,7 @@ The Git repositories and all public releases are available from [SourceForge]
 
 ## Install
 
-The recommended way to install the GNU ARM Eclipse plug-ins is to use the Eclipse standard install/update mechanism: in the _Eclipse_ menu go to: **Help** → **Install New Software…** and use the update site location: **http://gnuarmeclipse.sourceforge.net/updates**
+The recommended way to install the GNU ARM Eclipse plug-ins is to use the Eclipse standard install/update mechanism: in the _Eclipse_ menu, go to: **Help** → **Install New Software…** and use the update site location: **http://gnuarmeclipse.sourceforge.net/updates**
 
 ![Install the plug-ins]({{ site.baseurl }}/assets/images/2014/07/Install.png)
 
