--- a/_posts/openocd/releases/2015-05-19-openocd-v0.9.0-20150519-released.md
+++ b/_posts/openocd/releases/2015-05-19-openocd-v0.9.0-20150519-released.md
@@ -21,7 +21,7 @@ The just released stable version of OpenOCD (**0.9.0**) is now also available 
 
 [Binary files »]({{ page.download_url }})
 
-Install the proper package, and then update the path in **Preferences** → **Run/Debug** → **OpenOCD** to the new folder. If installed in the default location, the **Restore Defaults** button should automatically configure the proper path.
+Install the proper package, and then update the path in _Eclipse_ menu →  **(Window →) Preferences** → **Run/Debug** → **OpenOCD** to the new folder. If installed in the default location, the **Restore Defaults** button should automatically configure the proper path.
 
 The MD5 sums of the files are:
 
