--- a/_posts/openocd/releases/2015-10-28-openocd-v0.10.0-20151028-dev-released.md
+++ b/_posts/openocd/releases/2015-10-28-openocd-v0.10.0-20151028-dev-released.md
@@ -17,8 +17,37 @@ Version v0.10.0-201510281129-dev is a maintenance release. It includes binaries 
 
 [Binary files »]({{ page.download_url }})
 
+## Development version
+
 For those who want the latest OpenOCD features before the stable version is announced, the latest OpenOCD version built from the development repository was released in packages explicitly marked as `-dev`.
+
+## A word of caution
 
 The OpenOCD developers claim that the development versions should be generally safe to use. In case you encounter problems, please revert to the latest 0.9.0 stable release.
 
+## Configuration update
+
 The debug plug-in generally discovers the latest installed version, by using the Windows registry keys or by searching several designated folders. If you need to use a different version, update the `${openocd_path}` variable accordingly.
+
+## Download
+
+The new OpenOCD can be downloaded from the [GitHub Releases]({{ page.download_url }}) page.
+
+The MD5 sums of the files are:
+
+```
+6d4bb44d4218c0d5ecc1910ce3983162  
+gnuarmeclipse-openocd-debian32-0.10.0-201510281129-dev.tgz
+
+c40683089d471b24347134b756f4984f  
+gnuarmeclipse-openocd-debian64-0.10.0-201510281129-dev.tgz
+
+8f4efc7230a23c353edf507a82debe5a
+gnuarmeclipse-openocd-osx-0.10.0-201510281129-dev.pkg
+
+3f063edff9f6e5e9860178023a10573c  
+gnuarmeclipse-openocd-win32-0.10.0-201510281129-dev-setup.exe
+
+3e282291f4d5859232b01414d24aa097  
+gnuarmeclipse-openocd-win64-0.10.0-201510281129-dev-setup.exe
+```
