--- a/_posts/openocd/releases/2015-10-28-openocd-v0.10.0-20151028-dev-released.md
+++ b/_posts/openocd/releases/2015-10-28-openocd-v0.10.0-20151028-dev-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  GNU ARM Eclipse OpenOCD v0.10.0-201510281129-dev released
+title:  GNU ARM Eclipse OpenOCD v0.10.0-20151028*-dev released
 download_url: https://github.com/gnuarmeclipse/openocd/releases/tag/gae-0.10.0-20151028
 
 author: Liviu Ionescu
