add plug-ins 2.10.1-201510291730 release

--- a/_posts/plugins/releases/2015-08-01-plugins-v2.9.1-201508011813-released.md
+++ b/_posts/plugins/releases/2015-08-01-plugins-v2.9.1-201508011813-released.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  GNU ARM Eclipse plug-ins v2.9.1.201508011813 released
-download_url: https://github.com/gnuarmeclipse/plug-ins/releases/tag/v2.9.1.201508011813
+download_url: https://github.com/gnuarmeclipse/plug-ins/releases/tag/v2.9.1-201508011813
 
 author: Liviu Ionescu
 
@@ -24,7 +24,7 @@ tags:
 
 ---
 
-Version 2.9.1.201508011813 is a new release; the main improvement is the new version of the [GNU ARM Eclipse QEMU]({{ site.baseurl }}/qemu) emulator (including a graphical LED emulator), paired with a new version of the QEMU Debugging plug-in; also embedded applications can now be executed in Run mode, not only in Debug mode.
+Version 2.9.1-201508011813 is a new release; the main improvement is the new version of the [GNU ARM Eclipse QEMU]({{ site.baseurl }}/qemu) emulator (including a graphical LED emulator), paired with a new version of the QEMU Debugging plug-in; also embedded applications can now be executed in Run mode, not only in Debug mode.
 
 [Binary files »]({{ page.download_url }})
 
