plug-ins 2.10.1-201510291730  fix phrasing

--- a/_posts/plugins/releases/2015-10-29-plugins-v2.10.1-201510291730-released.md
+++ b/_posts/plugins/releases/2015-10-29-plugins-v2.10.1-201510291730-released.md
@@ -23,7 +23,7 @@ tags:
 
 ---
 
-Version 2.10.1-201510291730 is a new release; the main improvement is adding support for Cortex-M7, adding a STM32F7xx template, and an Analog Devices ADuCM36x template.
+Version 2.10.1-201510291730 is a new release; the main improvements are: support for Cortex-M7, adding a STM32F7xx template, and an Analog Devices ADuCM36x template.
 
 [Binary files »]({{ page.download_url }})
 
