--- a/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
+++ b/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
@@ -28,7 +28,7 @@ Version 2.10.2-201511061603 is a maintenance release, intended to improve the fl
 ## New features
 
 * [[#32](https://github.com/gnuarmeclipse/plug-ins/issues/32)] the Cortex-M7 specific FPU definitions `fpv5-d16` & `fpv5-sp-d16` were added to the Settings page;
-* [[#33](https://github.com/gnuarmeclipse/plug-ins/issues/33)] the toolchain prefix for **GCC 4.9 Linaro AArch64 bare-metal ELF** was updated from `aarch64-none-elf-` to `aarch64-elf-`; change effective for newly created projects; old projects require to reselect the toolchain for the update to be effective.
+* [[#33](https://github.com/gnuarmeclipse/plug-ins/issues/33)] the toolchain prefix for **GCC 4.9 Linaro AArch64 bare-metal ELF** was updated from `aarch64-none-elf-` to `aarch64-elf-`; the change is effective for newly created projects; old projects require to reselect the toolchain for the update to be effective.
 
 ## Addressed bugs
 
@@ -36,7 +36,7 @@ Version 2.10.2-201511061603 is a maintenance release, intended to improve the fl
 
 ## Template issues
 
-* in certain conditions, `newlib` complained for a missing symbol (`__dso_handle`); added as weak to `_system.c`.
+* in certain conditions, the linker complained about a missing symbol (`__dso_handle`); added as weak to `_syscalls.c`.
 
 ### Other changes
 
