--- a/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
+++ b/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
@@ -21,7 +21,7 @@ tags:
 
 ---
 
-Version 2.10.2-201511061603 is a maintenance release, intended to improve the floating port support for Cortex-M7, and to update the toolchain prefix for **Linaro AArch64 bare-metal ELF**.
+Version 2.10.2-201511061603 is a maintenance release, intended to improve the floating point support for Cortex-M7, and to update the toolchain prefix for **Linaro AArch64 bare-metal ELF**.
 
 [Binary files »]({{ page.download_url }})
 
