remove missing references in new arm-2015-11 article

--- a/pages/articles/arm-com-2015-11.md
+++ b/pages/articles/arm-com-2015-11.md
@@ -15,11 +15,7 @@ tags:
 
 ---
 
-<small>(This article was published in the [ARM Connected Community ](https://community.arm.com/groups/tools/blog/2015/11/17/gnu-arm-eclipse-full-cortex-m7-support-added) blog, on Nov 17, 2015 and republished in [EmbDev](xxx),
-[EEVBlog](xxx),
-[ST Forum](xxx)
-and [STM32Duino](xxx) and [Element 14](XXX)
-on Nov XX, 2015).</small>
+<small>(This article was published in the [ARM Connected Community ](https://community.arm.com/groups/tools/blog/2015/11/17/gnu-arm-eclipse-full-cortex-m7-support-added) blog, on Nov 17, 2015).</small>
 
 ## Overview
 
