--- a/pages/articles/arm-com-2015-11.md
+++ b/pages/articles/arm-com-2015-11.md
@@ -15,7 +15,14 @@ tags:
 
 ---
 
-<small>(This article was published in the [ARM Connected Community ](https://community.arm.com/groups/tools/blog/2015/11/17/gnu-arm-eclipse-full-cortex-m7-support-added) blog, on Nov 17, 2015).</small>
+<small>(This article was published in the [ARM Connected Community ](https://community.arm.com/groups/tools/blog/2015/11/17/gnu-arm-eclipse-full-cortex-m7-support-added) blog, on Nov 17, 2015
+and republished in
+[Element 14](http://www.element14.com/community/groups/open-source-software/blog/2015/11/18/gnu-arm-eclipse-full-cortex-m7-support-added),
+[EmbDev](https://embdev.net/topic/382190),
+[STM32Duino](http://stm32duino.com/viewtopic.php?f=41&t=740), 
+[EEVBlog](http://www.eevblog.com/forum/microcontrollers/gnu-arm-eclipse-full-cortex-m7-support-added/),
+[ST Forum](https://my.st.com/public/STe2ecommunities/mcu/Lists/STM32Java/Flat.aspx?RootFolder=%2fpublic%2fSTe2ecommunities%2fmcu%2fLists%2fSTM32Java%2fGNU%20ARM%20Eclipse%20full%20Cortex%2dM7%20support%20added&FolderCTID=0x01200200770978C69A1141439FE559EB459D758000F9A0E3A95BA69146A17C2E80209ADC21&TopicsView=https%3A%2F%2Fmy%2Est%2Ecom%2Fpublic%2FSTe2ecommunities%2Fmcu%2FLists%2FSTM32Java%2FAllItems%2Easpx&currentviews=1)  
+on Nov 18, 2015).</small>
 
 ## Overview
 
