--- a/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
+++ b/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
@@ -44,4 +44,4 @@ Version 2.10.2-201511061603 is a maintenance release, intended to improve the fl
 
 ## Known problems
 
-* none so far.
+* due to a copy/paste error, the default selection for the F7 processor is wrong and projects apparently configured for STM32F745xx are actually for the non-existing STM32F707xx and the build fails; the problem was fixed in the 2.11.1 release; as an workaround, explicitly select the processor even for STM32F745xx.
