post /articles/2015-12-09 added

--- a/pages/articles/arm-com-2015-12-09.md
+++ b/pages/articles/arm-com-2015-12-09.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: /articles/arm-com-2015-12-09/
-title: 'Article: GNU ARM Eclipse now available from Eclipse Marketplace'
+title: 'Article: GNU ARM Eclipse is now available from Eclipse Marketplace'
 author: Liviu Ionescu
 
 date: 2015-12-09 13:29:00 +0300
@@ -15,33 +15,42 @@ tags:
 
 ---
 
+<small>(This article was published in the [ARM Connected Community ](https://community.arm.com/groups/tools/blog/2015/12/09/gnu-arm-eclipse-now-available-from-eclipse-marketplace) blog, on Dec 9, 2015
+and republished in
+[Element 14](http://www.element14.com/community/groups/open-source-software/blog/2015/12/09/gnu-arm-eclipse-is-now-available-from-eclipse-marketplace-2),
+[EmbDev](https://embdev.net/topic/384016),
+[EEVBlog](http://www.eevblog.com/forum/microcontrollers/gnu-arm-eclipse-is-now-available-from-eclipse-marketplace/),
+[STM32Duino](http://stm32duino.com/viewtopic.php?f=41&t=783),
+[ST Forum](https://my.st.com/public/STe2ecommunities/mcu/Lists/STM32Java/Flat.aspx?RootFolder=%2fpublic%2fSTe2ecommunities%2fmcu%2fLists%2fSTM32Java%2fGNU%20ARM%20Eclipse%20is%20now%20available%20from%20Eclipse%20Marketplace&FolderCTID=0x01200200770978C69A1141439FE559EB459D758000F9A0E3A95BA69146A17C2E80209ADC21&TopicsView=https%3A%2F%2Fmy%2Est%2Ecom%2Fpublic%2FSTe2ecommunities%2Fmcu%2FLists%2FSTM32Java%2FAllItems%2Easpx&currentviews=0)  
+on Dec 9, 2015).</small>
+
 ## Overview
 
 The **[GNU ARM Eclipse project](https://github.com/gnuarmeclipse)** includes a set of open source Eclipse plug-ins and tools to create/build/debug/manage **ARM** (32-bits) and **AArch64** (64-bits) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. 
 
 ## Eclipse Marketplace
 
-With the intent to further improve the user experience while installing/updating the GNU ARM Eclipse plug-ins, the project was registered to [Eclipse Marketplace](https://marketplace.eclipse.org/content/gnu-arm-eclipse):
+Aiming to further improve the user experience while installing/updating the plug-ins, the **GNU ARM Eclipse** project was registered to [Eclipse Marketplace](https://marketplace.eclipse.org/content/gnu-arm-eclipse):
 
 ![Eclipse Marketplace]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-home.png)
 
 ## Benefits
 
-The main advantage of using the Eclipse Marketplace is a simplified install procedure, no longer requiring to manually enter the update site address.
+The main advantage of using the Eclipse Marketplace is a **simplified install procedure**, no longer requiring to manually enter the update site address.
 
 ## The Install button
 
 The Eclipse Marketplace not only provides a centralised index to locate projects, it goes one step further and provides a drag-and-drop browser button.
 
-![Eclipse Marketplace]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-button.png)
+![Install button]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-button.png)
 
 As seen above, the button can be included in any web page.
 
-To use it, just drag-and-drop the button to a running Eclipse, and the plug-ins to install/update will be identified automatically:
+To use it, just **drag-and-drop the button to a running Eclipse**, and the plug-ins to install/update will be automatically identified:
 
 ![Eclipse Marketplace Features]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-features.png)
 
-If, for any reason, this does not work, it is always possible to search the Eclipse Marketplace manually:
+If, for any reason, this does not work, it is always possible to search the Eclipse Marketplace manually from within Eclipse menus:
 
 ![Eclipse Marketplace Search]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-search.png)
 
