update change log with plug-ins version

--- a/_posts/plugins/releases/2015-12-17-plugins-v2.11.1-201512141335-released.md
+++ b/_posts/plugins/releases/2015-12-17-plugins-v2.11.1-201512141335-released.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-Version 2.11.1-201512141335 is a new release; the main improvements are: templates were updated to use CMSIS CORE 4.5, and the toolchain prefix for **Linaro AArch64 big-endian bare-metal ELF** was updated.
+Version 2.11.1-201512141335 is a new release; the main improvements are: templates were updated to use **CMSIS CORE 4.5**, and the toolchain prefix for **Linaro AArch64 big-endian bare-metal ELF** was updated.
 
 [Binary files »]({{ page.download_url }})
 
