--- a/_posts/plugins/releases/2016-02-09-plugins-v2.11.2-201602091039-released.md
+++ b/_posts/plugins/releases/2016-02-09-plugins-v2.11.2-201602091039-released.md
@@ -38,4 +38,4 @@ Version 2.11.2-201602091039 is a maintenance release; the STM templates were upd
 
 ## Known problems
 
-* none.
+* in certain conditions, the project wizard failed with exceptions; fixed in 2.11.3-201602101653.
