reformat article title with '-'

--- a/pages/articles/arm-com-2014-07.md
+++ b/pages/articles/arm-com-2014-07.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: /articles/arm-com-2014-07/
-title: 'Article: GNU ARM Eclipse: open source tools with (experimental) CMSIS Pack support'
+title: 'Article - GNU ARM Eclipse: open source tools with (experimental) CMSIS Pack support'
 author: Liviu Ionescu
 
 date: 2015-09-11 18:48:00 +0300
