--- a/pages/articles/arm-com-2015-09.md
+++ b/pages/articles/arm-com-2015-09.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: /articles/arm-com-2015-09/
-title: 'Article: The GNU ARM Eclipse project has a new look and a new home at GitHub'
+title: 'Article - The GNU ARM Eclipse project has a new look and a new home at GitHub'
 author: Liviu Ionescu
 
 date: 2015-09-28 10:21:00 +0300
