--- a/pages/articles/arm-com-2015-11.md
+++ b/pages/articles/arm-com-2015-11.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: /articles/arm-com-2015-11/
-title: 'Article: GNU ARM Eclipse: full Cortex-M7 support added'
+title: 'Article - GNU ARM Eclipse: full Cortex-M7 support added'
 author: Liviu Ionescu
 
 date: 2015-11-17 12:00:00 +0300
