--- a/pages/articles/arm-com-2015-12-09.md
+++ b/pages/articles/arm-com-2015-12-09.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: /articles/arm-com-2015-12-09/
-title: 'Article: GNU ARM Eclipse is now available from Eclipse Marketplace'
+title: 'Article - GNU ARM Eclipse is now available from Eclipse Marketplace'
 author: Liviu Ionescu
 
 date: 2015-12-09 13:29:00 +0300
