cosmetics, remove just
- or replace by only

--- a/_posts/openocd/releases/2015-03-20-openocd-v0.9.0-20150320-released.md
+++ b/_posts/openocd/releases/2015-03-20-openocd-v0.9.0-20150320-released.md
@@ -26,7 +26,7 @@ The OpenOCD developers claim that the development versions should be generally s
 
 In order to allow for multiple versions to coexist at the same time, the OpenOCD packages are now installed in folders including the version and the timestamp (like 0.9.0-201503201830-dev).
 
-For this mechanism to work, a new set of binaries for 0.8.0 was also released; there are no functional differences, just that the packages were changed to install in separate folders.
+For this mechanism to work, a new set of binaries for 0.8.0 was also released; there are no functional differences, only that the packages were changed to install in separate folders.
 
 Please uninstall the previous versions and install these new versions.
 
