--- a/_posts/plugins/releases/2013-10-11-plugins-v0.5.5.201310111213-released.md
+++ b/_posts/plugins/releases/2013-10-11-plugins-v0.5.5.201310111213-released.md
@@ -21,7 +21,7 @@ Version 0.5.5.201310111213 is the final 0.5.x version planned to be released.
 
 [Binary files »]({{ page.download_url }})
 
-There are no functional changes since 0.5.5.201309281715, just that it was marked as ‘End of life’ and no further updates are planned for it, since all development moved to the second edition of this plug-in, marked as 1.x.
+There are no functional changes since 0.5.5.201309281715, only that it was marked as ‘End of life’ and no further updates are planned for it, since all development moved to the second edition of this plug-in, marked as 1.x.
 
 Known bugs:
 
