--- a/_posts/qemu/releases/2015-10-29-qemu-v2-4-50-20151029-released.md
+++ b/_posts/qemu/releases/2015-10-29-qemu-v2-4-50-20151029-released.md
@@ -26,7 +26,7 @@ Version 2.4.50-201510290935 is a maintenance release, fixing the graphical rende
 
 ## Versioning
 
-The content is identical to that of 2.3.50, just that in the mean time the official release is 2.4.
+The content is identical to that of 2.3.50, only that in the mean time the official release is 2.4.
 
 ## Download
 
