--- a/pages/articles/arm-com-2015-12-09.md
+++ b/pages/articles/arm-com-2015-12-09.md
@@ -46,7 +46,7 @@ The Eclipse Marketplace not only provides a centralised index to locate projects
 
 As seen above, the button can be included in any web page.
 
-To use it, just **drag-and-drop the button to a running Eclipse**, and the plug-ins to install/update will be automatically identified:
+To use it, **drag-and-drop the button to a running Eclipse**, and the plug-ins to install/update will be automatically identified:
 
 ![Eclipse Marketplace Features]({{ site.baseurl }}/assets/images/2015/eclipse-marketplace-features.png)
 
