--- a/_posts/openocd/releases/2016-01-11-openocd-v0.10.0-201601101000-dev-released.md
+++ b/_posts/openocd/releases/2016-01-11-openocd-v0.10.0-201601101000-dev-released.md
@@ -13,7 +13,7 @@ categories:
 
 ---
 
-Version v0.10.0-201601101000-dev is a maintenance release. It includes binaries for Windows, OS X and GNU/Linux.
+Version v0.10.0-201601101000-dev is a maintenance release. It includes binaries for Windows, macOS and GNU/Linux.
 
 [Binary files »]({{ page.download_url }})
 
