--- a/_posts/plugins/releases/2014-11-26-plugins-v2.4.2-201411261616-released.md
+++ b/_posts/plugins/releases/2014-11-26-plugins-v2.4.2-201411261616-released.md
@@ -26,7 +26,7 @@ New features:
 * [feature-requests:#73] the **Peripherals** view is now visible in **OpenOCD** too
 * in the C/C++ Build settings, the linker configuration was extended with explicit options to configure the **newlib-nano**, including setting the **_printf_float** and **_scanf_float** symbols
 * [feature-requests:#70] the standard Eclipse preference mechanism is now the default mechanism for setting various defaults (more info in the wiki)
-* [feature-requests:#72] the `${jlink_path}` is automatically set to the install folder of J-Link, by reading the Windows registry or searching several folders (on OS X or GNU/Linux)
+* [feature-requests:#72] the `${jlink_path}` is automatically set to the install folder of J-Link, by reading the Windows registry or searching several folders (on macOS or GNU/Linux)
 * the `${openocd_path}` is automatically set to the install folder of OpenOCD, by searching several folders
 * the **Cortex-M7** architecture was added to the compiler list of supported architectures.
 
