--- a/_posts/plugins/releases/2015-04-06-plugins-v2.8.1-201504061754-released.md
+++ b/_posts/plugins/releases/2015-04-06-plugins-v2.8.1-201504061754-released.md
@@ -42,4 +42,4 @@ Known problems:
 
 * QEMU emulates only Cortex-M3 instructions; specific Cortex-M4 instructions are not supported;
 * the QEMU emulator supports a limited set of ARM system registers, like those controlling SysTick, and the NVIC; vendor specific peripherals are not yet supported;
-* the 64-bits Windows version of QEMU has some DLL problems and fails to start; until a solution is found, the 32-bits version of QEMU can be used on Windows 64-bit too.
+* the 64-bits Windows version of QEMU has some DLL problems and fails to start; until a solution is found, the 32-bits version of QEMU can be used on Windows 64-bits too.
