--- a/_posts/qemu/releases/2015-04-04-qemu-v2-2-92-20150404-released.md
+++ b/_posts/qemu/releases/2015-04-04-qemu-v2-2-92-20150404-released.md
@@ -73,7 +73,7 @@ As clearly marked, support for these boards is **experimental.** The boards gene
 
 * **-verbose** added, with multiple levels to increase verbosity; the first level of verbosity is always enabled by the plug-in, to get the feedback required when starting the server backend for the debugging session;
 * **-semihosting-cmdline** added, to define the semihosting command line, required when running unit tests;
-* build script for OS X, Debian 32-bit/64-bit and Windows 32-bit/64-bit (using MinGW-w64) added; the required libraries are build locally
+* build script for macOS, Debian 32-bits/64-bits and Windows 32-bits/64-bits (using MinGW-w64) added; the required libraries are build locally
 
 ## Eclipse plug-in
 
