--- a/_posts/qemu/releases/2015-10-29-qemu-v2-4-50-20151029-released.md
+++ b/_posts/qemu/releases/2015-10-29-qemu-v2-4-50-20151029-released.md
@@ -11,17 +11,17 @@ categories:
   - releases
   - qemu
 tags:
-  - os x
+  - macOS
 
 ---
 
-Version 2.4.50-201510290935 is a maintenance release, fixing the graphical rendering on OS X 10.11 and the typo related to the name of the Maple board.
+Version 2.4.50-201510290935 is a maintenance release, fixing the graphical rendering on macOS 10.11 and the typo related to the name of the Maple board.
 
 [Binary files »]({{ page.download_url }})
 
 ## Addressed issues
 
-* the problem affecting the graphical rendering on OS X 10.11 was identified as a bug in the SDL_Image v1.2.12 library; the workaround was to revert to v1.2.10; rendering seems ok now, on all platforms;
+* the problem affecting the graphical rendering on macOS 10.11 was identified as a bug in the SDL_Image v1.2.12 library; the workaround was to revert to v1.2.10; rendering seems ok now, on all platforms;
 * the name of the Maple board was misspeled; fixed.
 
 ## Versioning
