--- a/pages/articles/arm-com-2014-07.md
+++ b/pages/articles/arm-com-2014-07.md
@@ -20,7 +20,7 @@ tags:
 
 ## Overview
 
-The **GNU ARM Eclipse** project includes a set of open source Eclipse plug-ins that enhance [Eclipse CDT](https://www.eclipse.org/cdt/) (C/C++ Development Tooling) with the specific functionality required to create/build/debug/manage **ARM** (32-bit) and **AArch64** (64-bit) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. These plug-ins will be the foundation of a future integrated suite intended to meet the growing demands of entry level users and small companies.
+The **GNU ARM Eclipse** project includes a set of open source Eclipse plug-ins that enhance [Eclipse CDT](https://www.eclipse.org/cdt/) (C/C++ Development Tooling) with the specific functionality required to create/build/debug/manage **ARM** (32-bits) and **AArch64** (64-bits) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. These plug-ins will be the foundation of a future integrated suite intended to meet the growing demands of entry level users and small companies.
 
 ## Project sites
 
