--- a/pages/articles/arm-com-2015-09.md
+++ b/pages/articles/arm-com-2015-09.md
@@ -27,7 +27,7 @@ on Oct 6, 2015, and [Element 14](http://www.element14.com/community/groups/open-
 
 ## Overview
 
-The **[GNU ARM Eclipse project](https://github.com/gnuarmeclipse)** includes a set of open source Eclipse plug-ins and tools to create/build/debug/manage **ARM** (32-bit) and **AArch64** (64-bit) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. 
+The **[GNU ARM Eclipse project](https://github.com/gnuarmeclipse)** includes a set of open source Eclipse plug-ins and tools to create/build/debug/manage **ARM** (32-bits) and **AArch64** (64-bits) applications and static/shared libraries, using the latest **GNU ARM GCC** toolchains. 
 
 ## New look
 
