--- a/_posts/openocd/releases/2015-01-31-openocd-v0.8.0-20150131-released.md
+++ b/_posts/openocd/releases/2015-01-31-openocd-v0.8.0-20150131-released.md
@@ -23,7 +23,7 @@ For a better integrations with the GNU ARM Eclipse debug plug-ins, a new distri
 
 [Binary files »]({{ page.download_url }})
 
-The first benefit of using this distribution is **user convenience**, on Windows and OS X the program is packed as a Setup package.
+The first benefit of using this distribution is **user convenience**, on Windows and macOS the program is packed as a Setup package.
 
 ![The OpenOCD Windows Setup]({{ site.baseurl }}/assets/images/2015/openocd-setup-wizard.png)
 
