openocd & build tools: refer to /D patch

--- a/_posts/openocd/releases/2016-10-28-openocd-v0-10-0-20161028-dev-released.md
+++ b/_posts/openocd/releases/2016-10-28-openocd-v0-10-0-20161028-dev-released.md
@@ -29,6 +29,14 @@ The OpenOCD developers claim that the development versions should be generally s
 
 The debug plug-in generally discovers the latest installed version, by using the Windows registry keys or by searching several designated folders. If you need to use a different version, update the `${openocd_path}` variable accordingly.
 
+## Changes
+
+In addition to the official OpenOCD changes, the only small functional improvement is a patch that allows silent Windows setups to install in a custom location, using the `/D` command line switch.
+
+## Known problems
+
+* none so far
+
 ## Download
 
 The new OpenOCD can be downloaded from the [GitHub Releases]({{ page.download_url }}) page.
