--- a/_posts/qemu/releases/2016-11-28-qemu-v2-7-0-20161128-released.md
+++ b/_posts/qemu/releases/2016-11-28-qemu-v2-7-0-20161128-released.md
@@ -32,11 +32,11 @@ As the old version 1.2 of the SDL graphical library was less and less supported,
 
 - ths **STM32** implementation was extended to support the `EXTI` and the `SYSCFG` peripherals; now it is possible to trigger interrupts on GPIO pin changes;
 - the debug options were extended with two new trace options, `func` and `mr` (use them after `-d`);
-- the most compelling feature is the addition of the active graphical buttons; the rectangles around the buttons are live, and moving the mouse over them changes the cursor to a hand; clicking the buttons is also functional, the **Reset** button triggers a board reset; the user button is also connected to the correspondig GPIO pin, and can be checked by reading the GPIO pin input value; it is also possible to configure the EXTI device to trigger interrupts on GPIO pin changes.
+- the most compelling feature is **the addition of the active graphical buttons**; the rectangles around the buttons are live, and moving the mouse over them **changes the cursor to a hand**; clicking the buttons is also functional, the **Reset** button triggers a board reset; the user button is also connected to the correspondig GPIO pin, and can be checked by **reading the GPIO pin input** value; it is also possible to configure the EXTI device to **trigger interrupts on GPIO pin changes**.
 
 ## Known problems
 
-- the graphical buttons are currently available only on the STM32F4DISCOVERY board (the user button is connected to GPIOA0); more boards will be added in future versions;
+- the graphical buttons are currently available only for the STM32F4DISCOVERY board (the user button is connected to GPIO A0); more boards will be added in future versions;
 - Ctrl-C does not interrupt the execution if the `--nographic` option is used.
 
 ## How to test the buttons
