post: is a new release

--- a/_posts/qemu/releases/2016-11-28-qemu-v2-7-0-20161128-released.md
+++ b/_posts/qemu/releases/2016-11-28-qemu-v2-7-0-20161128-released.md
@@ -22,7 +22,7 @@ tags:
 
 ---
 
-Version 2.7.0-201611282115 is a maintenance release, adding support for active graphical buttons.
+Version 2.7.0-201611282115 is a new release, adding support for active graphical buttons.
 
 ## Changes
 
