qemu: refer to STM32F0DISCOVERY

--- a/_posts/qemu/releases/2016-12-27-qemu-v2-8-0-20161227-released.md
+++ b/_posts/qemu/releases/2016-12-27-qemu-v2-8-0-20161227-released.md
@@ -30,7 +30,8 @@ The main internal change is the use of CMSIS SVD files to generate the periphera
 ## New features
 
 - the most compelling new feature is **the addition of active graphical buttons**; the rectangles around the buttons are sensitive, and moving the mouse over them **changes the cursor to a hand**; clicking the buttons is also functional, the **Reset** button triggers a board reset; the user button is also connected to the correspondig GPIO pin, and can be checked by **reading the GPIO pin input** value; it is also possible to configure the EXTI device to **trigger interrupts on GPIO pin changes**;
-- ths **STM32** implementation was extended to support the `EXTI` and the `SYSCFG` or `AFIO` peripherals; now it is possible to trigger interrupts on GPIO pin changes;
+- the **STM32** implementation was extended to support the `EXTI` and the `SYSCFG` or `AFIO` peripherals; now it is possible to trigger interrupts on GPIO pin changes;
+- the **STM32F0DISCOVERY** board was added, as a Cortex-M0 board.
 
 ## Addressed bugs
 
