fix broken links

--- a/_posts/plugins/releases/2015-08-01-plugins-v2.9.1-201508011813-released.md
+++ b/_posts/plugins/releases/2015-08-01-plugins-v2.9.1-201508011813-released.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  GNU ARM Eclipse plug-ins v2.9.1.201508011813 released
-download_url: https://github.com/gnuarmeclipse/plug-ins/releases/tag/v2.9.1-201508011813
+download_url: https://github.com/gnuarmeclipse/plug-ins/releases/tag/v2.9.1.201508011813
 
 author: Liviu Ionescu
 
@@ -30,7 +30,7 @@ Version 2.9.1-201508011813 is a new release; the main improvement is the new ve
 
 ## New features
 
-* [GNU ARM Eclipse QEMU 2.2.92-20150404*-dev released]({{ site.baseurl }}/2015/04/05/qemu-v2-2-92-20150404-released/);
+* [GNU ARM Eclipse QEMU 2.2.92-20150404*-dev released]({{ site.baseurl }}/blog/2015/04/04/qemu-v2-2-92-20150404-released/);
   ![The STM32F4-Discovery 4 LEDs]({{ site.baseurl }}/assets/images/2015/board-stm32f4-discovery-leds.png)
 * [GNU ARM Eclipse Build Tools 2.6-20150715* released](https://github.com/gnuarmeclipse/windows-build-tools/wiki/Release-v2.6-20150715);
 * a new version of the **QEMU Debugging plug-in** was added; the board and device definitions are copied from the project CMSIS configuration, if available;
@@ -61,4 +61,4 @@ Version 2.9.1-201508011813 is a new release; the main improvement is the new ve
 
 * none so far
 
-Notes: for QEMU problems, please see the [separate post]({{ site.baseurl }}/2015/04/05/qemu-v2-2-92-20150404-released/).
+Notes: for QEMU problems, please see the [separate post]({{ site.baseurl }}/blog/2015/04/04/qemu-v2-2-92-20150404-released/).
