--- a/_posts/plugins/releases/2015-03-21-plugins-v2.7.1-201503211846-released.md
+++ b/_posts/plugins/releases/2015-03-21-plugins-v2.7.1-201503211846-released.md
@@ -25,8 +25,8 @@ Version 2.7.1-201503211846 is a new release; the main improvements include: a 
 
 New features:
 
-* [GNU ARM Eclipse Build Tools v2.4-20150321* released]({{ site.baseurl }}/2015/03/21/windows-build-tools-v2.4-20150321-released/)
-* [GNU ARM Eclipse OpenOCD 0.9.0-20150320*-dev released]({{ site.baseurl }}/2015/03/20/openocd-v0.9.0-20150320-released/)
+* [GNU ARM Eclipse Build Tools v2.4-20150321* released]({{ site.baseurl }}/blog/2015/03/21/windows-build-tools-v2.4-20150321-released/)
+* [GNU ARM Eclipse OpenOCD 0.9.0-20150320*-dev released]({{ site.baseurl }}/blog/2015/03/20/openocd-v0.9.0-20150320-released/)
 * [feature-requests:#86] new **J-Link and OpenOCD preferences pages** were added, to configure the executable name and the location of the binaries;
   ![The J-Link Preferences page]({{ site.baseurl }}/assets/images/2015/preferences-run-jlink.png)
 * [feature-requests:#89] in the Peripherals view, when displaying registers that changed since the previous halt, instead of a single colour (yellow) to mark changed values, **three shades of yellow** are used in a fading way to also show values changed by the previous and the previous-previous steps;
