plugins/releases: no not call them 'major'

--- a/_posts/plugins/releases/2016-06-21-plugins-v3.1.1-201606210758-released.md
+++ b/_posts/plugins/releases/2016-06-21-plugins-v3.1.1-201606210758-released.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-Version 3.1.1-201606210758 is a new major release; the main change is adding support for **Eclipse 4.6 Neon** (CDT 9.x).
+Version 3.1.1-201606210758 is a new release; the main change is adding support for **Eclipse 4.6 Neon** (CDT 9.x).
 
 [Binary files »]({{ page.download_url }})
 
