--- a/_posts/plugins/releases/2017-01-14-plugins-v3.2.1-201701141320-released.md
+++ b/_posts/plugins/releases/2017-01-14-plugins-v3.2.1-201701141320-released.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-Version 3.2.1-201701141320 is a new major release; the main change is adding support for **Eclipse Neon.2** (CDT 9.2).
+Version 3.2.1-201701141320 is a new release; the main change is adding support for **Eclipse Neon.2** (CDT 9.2).
 
 [Binary files »]({{ page.download_url }})
 
