--- a/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
+++ b/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
@@ -19,7 +19,7 @@ tags:
 
 ---
 
-Version 3.3.1-201702251311 is a new major release; the main change is adding support for **GCC 6.x**, including new **Cortex-M23/M33**.
+Version 3.3.1-201702251311 is a new release; the main change is adding support for **GCC 6.x**, including new **Cortex-M23/M33**.
 
 [Binary files »]({{ page.download_url }})
 
