add openocd release 0.10.0-20170418

--- a/_posts/openocd/releases/2017-01-24-openocd-v0-10-0-20170124-released.md
+++ b/_posts/openocd/releases/2017-01-24-openocd-v0-10-0-20170124-released.md
@@ -23,13 +23,13 @@ This release follows the latest official release [OpenOCD 0.10.0](http://openocd
 
 ## Changes
 
-Except the official OpenOCD changes, there are no specific GNU ARM Eclipse changes, and even previous patches were no longer ncecessary with this version.
+Except the official OpenOCD changes, there are no specific GNU ARM Eclipse changes, and even previous patches were no longer necessary with this version.
 
 One important note: the old `ft2232` interface was deprecated and replaced by the new `ftdi` interface; all configuration files using `ft2232` were removed from the original OpenOCD distribution; as a consequence, **debug configurations should be updated to use the interface files available in the `interface/ftdi` folder**.
 
 ## Known problems
 
-* none so far
+* [[#12](https://github.com/gnuarmeclipse/openocd/issues/12)] CMSIS-DAP device not found; fixed in [0.10.0-20170418]({{ site.baseurl }}/blog/2017/04/19/openocd-v0-10-0-20170418-released/)
 
 ## Download
 
