--- a/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
+++ b/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
@@ -52,3 +52,4 @@ Version 3.3.1-201702251311 is a new release; the main change is adding support f
 ## Known problems
 
 * on Neon.2, when using GDB 7.12 from GCC 6.x, the Suspend and Terminate buttons are not functional and it is not possible to interrupt a running debug session; the problem is not related to the GNU ARM Eclipse plug-ins, but a bug in Eclipse CDT 9.2; the bug was eventually fixed in CDT 9.2.1 packed with Neon.3, due in March 2017; as a temporary workaround, better use GDB 7.10, from GCC 5.x. 
+* the default for architectures was inadvertedly changed to cortex-m33; fixed in 3.4.1.
